k8s/apps/multimedia/prowlarr/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
      app.kubernetes.io/instance: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/instance: prowlarr
    spec:
      securityContext:
        runAsNonRoot: false # FIXME: Linuxserver images require root for init
      containers:
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr:2.3.5
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
            limits:
              memory: 2Gi
          startupProbe:
            httpGet:
              path: /ping
              port: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
          ports:
            - name: http
              containerPort: 9696
          securityContext:
            readOnlyRootFilesystem: false # FIXME: Linuxserver images require writable root fs
          volumeMounts:
            - name: data
              mountPath: /config
            - name: config
              mountPath: /config/config.xml
              subPath: config.xml
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: config-prowlarr
        - name: config
          secret:
            secretName: config-prowlarr
